<resources>
    <string name="app_name">BrainMove</string>
    <string name="appointments_bottom_text">Citas</string>
    <string name="measurements_bottom_text">Medidas</string>
    <string name="trends_bottom_text">Tendencia</string>
    <string name="plans_bottom_text">Plan</string>
    <string name="profile_bottom_text">Perfil</string>
    <string name="date_text">Fecha</string>
    <string name="trainer_text">Instructora</string>
    <string name="exercises_text">Ejercicios</string>
    <string name="weight_label_text">Peso</string>
    <string name="bmi_label_text">BMI</string>
    <string name="body_fat_label_text">Grasa corporal</string>
    <string name="fat_free_body_weight_label_text">Peso corporal sin grasa</string>
    <string name="subcutaneous_fat_label_text">Grasa subcutanea</string>
    <string name="visceral_fat_label_text">Grasa visceral</string>
    <string name="body_water_label_text">Agua corporal</string>
    <string name="skeletal_muscle_label_text">Musculo esqueletico</string>
    <string name="muscle_mass_label_text">Masa muscular</string>
    <string name="bone_mass_label_text">Masa osea</string>
    <string name="protein_label_text">Proteina</string>
    <string name="bmr_label_text">BMR</string>
    <string name="metabolic_age_label_text">Edad metabolica</string>
    <string name="email_text">Correo electrónico</string>
    <string name="password_text">Contraseña</string>
    <string name="login_text">Iniciar sesión</string>
    <string name="forgot_password_text">¿Olvidaste tu contraseña?</string>
    <string name="sign_in_text">Crear cuenta</string>
    <string name="login_error_general_message">Ha ocurrido un error, revisá los campos e intentalo de nuevo.</string>
    <string name="verify_email_text_message">Por favor revisá tu correo electrónico registrado en %s para verificar tu cuenta.</string>
    <string name="resend_email_text">Reenviar correo</string>
    <string name="password_recovery_title">Reestablecer contraseña</string>
    <string name="password_recovery_description">Ingresa el correo electrónico registrado en BrainMove para enviar un enlace de recuperación de contraseña.</string>
    <string name="password_recovery_button_text">Enviar</string>
    <string name="recovery_password_email_sent_text">Se ha enviado un correo para recuperar la contraseña.</string>
    <string name="recovery_password_email_sent_error_text">No se ha podido enviar el correo de recuperación de contraseña.</string>
    <string name="valid_email_error_text">Ingrese un correo válido. Ej: john@mail.com</string>
    <string name="required_field_error_text">Campo requerido.</string>
    <string name="create_account_title">Crear cuenta</string>
    <string name="create_account_description">Ingresa los siguientes datos para crear una cuenta en BrainMove. Posteriormente deberás verificar el correo electrónico ingresado.</string>
    <string name="create_account_button_text">Crear cuenta</string>
    <string name="name_text">Nombre completo</string>
    <string name="create_account_failure_text">Ha ocurrido un error al crear la cuenta. Revisa los campos ingresados e intenta de nuevo.</string>
    <string name="create_account_success_text">La cuenta ha sido ingresada correctamente. Revisá el correo electrónico para confirmar la cuenta.</string>
    <string name="loading_login_message">Iniciando sesión</string>
    <string name="loading_forgot_password_message">Enviando correo…</string>
    <string name="loading_sign_in_message">Creando cuenta…</string>
    <string name="retrieve_measures_error">No se han podido cargar los datos.</string>
    <string name="no_measures_text">Aún no hay datos registrados</string>
    <string name="loading_measures_message">Cargando las medidas</string>
    <string name="kg_suffix">" kg"</string>
    <string name="percentage_suffix">" %"</string>
    <string name="kcal_suffix">" kcal"</string>
    <string name="retrieve_plan_error">Ha ocurrido un error al cargar el plan.</string>
    <string name="loading_plans_message">Cargando el plan…</string>
    <string name="to_date_label_text">Hasta: %s</string>
    <string name="routines_title_text">Rutinas</string>
    <string name="no_plans_text">No hay plan asignado</string>
    <string name="manage_users">Administrar usuarios</string>
    <string name="retrieve_users_error">Ha ocurrido un error al obtener los usuarios.</string>
    <string name="saving_measures_message">Guardando las mediciones…</string>
    <string name="save_button_text">Guardar</string>
    <string name="cancel_text">Cancelar</string>
    <string name="select_user_text">Seleccione un usuario</string>
    <string name="save_measure_error">No se han podido guardar las mediciones.</string>
    <string name="save_measure_success">Se han guardado correctamente las mediciones.</string>
    <string name="loading_users_message">Cargando usuarios…</string>
    <string name="workouts_bottom_text">Ejercicios</string>
    <string name="users_bottom_text">Usuarios</string>
    <string name="customer_no_measures_text">Cliente sin mediciones.</string>
    <string name="search_hint_text">Buscar</string>
    <string name="create_block_text">Crear bloque</string>
    <string name="select_exercise_text">Seleccione un ejercicio</string>
    <string name="image_loader_widget_hint">URL de la imagen</string>
    <string name="block_name_text">Nombre del bloque</string>
    <string name="description_text">Descripción</string>
    <string name="duration_hint">Duración</string>
    <string name="action_save_text">Guardar</string>
    <string name="routine_name_text">Nombre de la rutina</string>
    <string name="routine_number_text">Número de rutina</string>
    <string name="create_routine_text">Crear rutina</string>
    <string name="create_plan_text">Crear plan</string>
    <string name="plan_name_text">Nombre del plan</string>
    <string name="plan_goal_text">Objetivo</string>
    <string name="add_routine_text">Agregar rutina</string>
    <string name="add_block_text">Agregar bloque</string>
    <string name="add_measure_text">Agregar mediciones</string>
    <string name="add_plan_text">Agregar plan</string>
    <string name="save_plan_success_text">Se ha creado correctamente el plan.</string>
    <string name="save_plan_failure_text">Ha ocurrido un error al guardar el plan.</string>
    <string name="select_date_text">Seleccione una fecha</string>
    <string name="no_routines_text">No has agregado ninguna rutina aún. Presiona \"Agregar rutina\" para empezar.</string>
    <string name="no_blocks_text">No has agregado ningun bloque aún. Presiona \"Agregar bloque\" para empezar.</string>
    <string name="loading_exercises_message">Cargando ejercicios..</string>
    <string name="creating_plan_loading_message">Creando plan..</string>
    <string name="agenda_bottom_text">Agenda</string>
    <string name="coming_soon_text">Próximamente</string>
    <string name="action_logout_text">Cerrar sesión</string>
    <string name="choose_image_title">Seleccione una image</string>

    <plurals name="numberOfExercises">
        <item quantity="one">%d ejercicio seleccionado</item>
        <item quantity="other">%d ejercicios seleccionados</item>
    </plurals>

    <!--  Cloudinary info  -->
    <string name="cloudinary_api_key">177999428822223</string>
    <string name="cloudinary_api_secret">OMV_Q-exJSllQTXuGglLck0LjwY</string>
    <string name="cloudinary_api_name">dwcjvoe7w</string>
    <string name="loading_upload_photo_message">Actualizando la foto de perfil…</string>
    <string name="fetch_users_error">Ha ocurrido un error al obtener los usuarios.</string>
    <string name="empty_users_error_text">No hay usuarios disponibles.</string>
    <string name="terms_and_conditions_text">Términos y Condiciones</string>
    <string name="start_text">Iniciar</string>
    <string name="reservation_bottom_text">Reservas</string>
    <string name="today_tab_text">HOY</string>
    <string name="tomorrow_tab_text">MAÑANA</string>
    <string name="reserved_text">Reservado</string>
    <string name="available_text">Reservar</string>
    <string name="unavailable_text">Agotado</string>
    <string name="retrieve_reservations_error">Ha ocurrido un error al obtener las sesiones.</string>
    <string name="functional_training_title">Funcionales</string>
    <string name="make_reservation_error">Ha ocurrido un error al hacer la reserva.</string>
    <string name="release_reservation_error">Ha ocurrido un error al liberar la reserva.</string>
    <string name="release_reservation_success">Se liberó el espacio con éxito.</string>
    <string name="make_reservation_success">Se reservó el espacio con éxito.</string>
    <string name="loading_generic_text">Cargando…</string>
    <string name="settings_title">Configuración</string>
    <string name="accept_button_text">Aceptar</string>
    <string name="retrieve_payment_error">No se ha podido obtener los últimos pagos realizados.</string>
    <string name="loading_payments_message">Cargando los pagos…</string>
    <string name="my_payments_text">Mis pagos</string>
    <string name="payments_title">Pagos</string>
    <string name="no_payments_text">No hay pagos</string>
    <string name="add_payment_text">Agregar pago</string>
    <string name="create_payment_text">Crear pago</string>
    <string name="payment_description_text">Detalle</string>
    <string name="payment_total_text">Total</string>
    <string name="due_date_text">Fecha final</string>
    <string name="from_date_text">Desde</string>
    <string name="to_date_text">Hasta</string>
    <string name="creating_payment_loading_message">Registrando el pago…</string>

    <string name="save_payment_success_text">Se ha creado correctamente el pago.</string>
    <string name="save_payment_failure_text">Ha ocurrido un error al crear el pago.</string>
    <string name="retrieve_block_measure_error">No se ha podido obtener las medidas de duración de los bloques.</string>
    <string name="retrieve_workout_measure_error">>No se ha podido obtener las medidas de duración de los ejercicios.</string>
    <string name="admin_reservation_hour_text">Hora:</string>
    <string name="admin_reservation_max_amount_text">Capacidad máxima:</string>
    <string name="admin_reservation_available_text">Espacios disponibles:</string>
    <string name="admin_reservation_participants_text">Participantes:</string>
    <string name="admin_reservation_max_amount_value_text">%d personas</string>
    <string name="admin_reservation_available_value_text">%d espacios</string>
    <string name="hour_text">Hora</string>
    <string name="create_reservation_text">Crear sesión</string>
    <string name="add_session_text">Agregar sesión</string>
    <string name="select_hour_text">Seleccione una hora</string>
    <string name="save_session_success_text">Se ha creado correctamente la sesión.</string>
    <string name="save_session_failure_text">Ha ocurrido un error al crear la sesión.</string>
    <string name="creating_session_loading_message">Registrando la sesión…</string>
    <string name="remove_session_alert">Desea borrar esta sesión de entrenamiento?</string>
    <string name="remove_session_success">Se ha eliminado la sesión correctamente.</string>
    <string name="remove_session_error">Ha ocurrido un error al eliminar la sesión.</string>
    <string name="category_text">Categoría</string>
    <string name="modify_plan_text">Modificar plan</string>
    <string name="quantity_label_text">Cantidad:</string>
    <string name="background_image_label">Imagen de fondo:</string>
    <string name="demo_image_label">Demostración:</string>
    <string name="additional_info_text">Notas o información adicional</string>
    <string name="add_text">Agregar</string>
    <string name="delete_text">Eliminar</string>
    <string name="modify_text">Modificar</string>
</resources>
